done jwt service, cleaning up env

--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=auth
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=inzynierka
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+
 spring.jpa.show-sql=true
+
+jwt.niewzykle_wazny_secret_jwt=${SECRET_JWT}
+jwt.duration = 180000
