Zabezpieczono akcje dla admina, dodano swaggera. Trzeba nastepnie swtorzyc dto dla zwracanych danych o userach

--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -23,3 +23,6 @@ jwt.duration = 600000
 #Waznosc tokena refresh 1h
 jwt.refreshDuration = 3600000
 frontend.address=http://localhost:4200
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
