--- a/warehouse/src/main/resources/application.properties
+++ b/warehouse/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.password=inzynierka
 spring.jpa.show-sql=true
 spring.flyway.ignore-migration-patterns=*:missing
 spring.flyway.validate-on-migrate=false
+
+apigateway.url=http://localhost:8080/api/gateway/register
