Utworzono moduł kontrahentów i tabele kontrahentów. Od teraz przy dodawaniu/edytowaniu produktu należy podać ID odpowiedniego kontrahenta inaczej wyrzuci bad request. Do jutra zrobię Inwentaryzacje i Przesunięcia magazynowe.

--- a/contractorService/src/main/resources/application.properties
+++ b/contractorService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=contractorService
+spring.application.name=CONTRACTORS
 server.port=9877
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -12,3 +12,5 @@ spring.datasource.password=inzynierka
 spring.jpa.show-sql=true
 spring.flyway.ignore-migration-patterns=*:missing
 spring.flyway.validate-on-migrate=false
+
+apigateway.url=http://localhost:8080/api/gateway/register
