Utworzono tabele przyjec i wydan magazynowych stworzono modele kontroler i serwis, umozliwiono tworzenie, edycie i usuwanie przyjec i wydan z zachowaniem przyjetej logiki. Jutro czyli dzisiaj zrobie endpointy do wyświetlania wszystkich i pojedynczych przyjec i wydan oraz do wyswietlania historii produktu w systemie.

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -32,8 +32,8 @@ spring.cloud.gateway.routes[2].uri=lb://PRODUCT
 spring.cloud.gateway.routes[2].predicates=Path=/api/products/**
 spring.cloud.gateway.routes[2].filters[0]=AuthenticationFilter
 
-spring.cloud.gateway.routes[3].id=PRODUCTS
-spring.cloud.gateway.routes[3].uri=lb://PRODUCTS
+spring.cloud.gateway.routes[3].id=PRODUCTSERVICE
+spring.cloud.gateway.routes[3].uri=lb://PRODUCTSERVICE
 spring.cloud.gateway.routes[3].predicates=Path=/api/productService/**
 spring.cloud.gateway.routes[3].filters[0]=AuthenticationFilter
 
