final commit(na razie) przygotowane aplikacje do konteneryzacji

--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=AUTHS
 server.port=9876
 spring.main.allow-bean-definition-overriding=true
 #EUREKA CONFIG
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=AUTHS
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 #BAZA
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://warehouse:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=inzynierka
 spring.jpa.show-sql=true
