--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.0.13</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath></relativePath>
     </parent>
     <groupId>com.example</groupId>
     <artifactId>auth</artifactId>
@@ -122,5 +122,7 @@
             </plugin>
         </plugins>
     </build>
+
+
 
 </project>
