--- a/contractorService/pom.xml
+++ b/contractorService/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.0.13</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath></relativePath> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
     <artifactId>contractorService</artifactId>
@@ -31,6 +31,12 @@
         <spring-cloud.version>2022.0.3</spring-cloud.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>auth</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -102,12 +108,6 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>auth</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>org.example</groupId>
             <artifactId>RegisterEndpoints</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -134,5 +134,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
