--- a/warehouse/src/main/resources/application.properties
+++ b/warehouse/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=warehouse
 server.port=9880
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=WAREHOUSE
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://warehouse:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=inzynierka
 spring.jpa.show-sql=true
 spring.flyway.ignore-migration-patterns=*:missing
 spring.flyway.validate-on-migrate=false
 
-apigateway.url=http://localhost:8080/api/gateway/register
+apigateway.url=http://gateway-service:8080/api/gateway/register
 
