--- a/warehouse/Dockerfile
+++ b/warehouse/Dockerfile
@@ -1,5 +1,6 @@
 FROM amazoncorretto:17-alpine
 WORKDIR /app
 COPY target/warehouse-0.0.1-SNAPSHOT.jar app.jar
+RUN apk add --no-cache netcat-openbsd
 EXPOSE 9880
 ENTRYPOINT ["java","-jar","app.jar"]
