--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,1 +1,7 @@
 FROM postgres:latest
+ARG DB_USER=dev
+ARG DB_PASS=dev
+ARG DB_NAME=dev
+ENV POSTGRES_USER=$DB_USER
+ENV POSTGRES_PASSWORD=$DB_PASS
+ENV POSTGRES_DB=$DB_NAME
