--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.main.allow-bean-definition-overriding=true
 
 #EUREKA
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=gateway
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
@@ -15,7 +15,7 @@ spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:4200
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:4200,http://frontend:4200
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
