--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=AUTHS
 server.port=9876
 spring.main.allow-bean-definition-overriding=true
 #EUREKA CONFIG
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=AUTHS
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 #BAZA
-spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+spring.datasource.url=jdbc:postgresql://warehouse-db:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.show-sql=true
@@ -25,7 +25,6 @@ jwt.niewzykle_wazny_secret_jwt=${JWT_SECRET}
 jwt.duration = 600000
 #Waznosc tokena refresh 1h
 jwt.refreshDuration = 3600000
-frontend.address=http://localhost:4200
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
