--- a/contractorService/src/main/resources/application.properties
+++ b/contractorService/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=CONTRACTORS
 server.port=9877
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=CONTRACTORS
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+spring.datasource.url=jdbc:postgresql://warehouse-db:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.show-sql=true
@@ -18,4 +18,4 @@ management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=never
 
-apigateway.url=http://localhost:8080/api/gateway/register
+apigateway.url=http://gateway-service:8080/api/gateway/register
