--- a/eureka/Dockerfile
+++ b/eureka/Dockerfile
@@ -1,5 +1,6 @@
 FROM amazoncorretto:17-alpine
 WORKDIR /app
+RUN apk add --no-cache curl
 COPY target/eureka-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8761
 ENTRYPOINT ["java","-jar","app.jar"]
