--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.application.name=product
 server.port=9878
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=PRODUCT
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+spring.datasource.url=jdbc:postgresql://warehouse-db:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.show-sql=true
 spring.flyway.ignore-migration-patterns=*:missing
 spring.flyway.validate-on-migrate=false
 
-apigateway.url=http://localhost:8080/api/gateway/register
+apigateway.url=http://gateway-service:8080/api/gateway/register
 
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=health
