Utworzono profile w celu latwiejszego testowania aplikacji lokalnie, i latwa zmiana na wersje przystosowana na konteneryzacje, w migracji zmieniono dane dla utworzonego na szytwno magazynu, naprawiono zwolnienie miejsca w przypadku edycji/usunieciu produktu

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=gateway
 server.port=8080
 spring.main.allow-bean-definition-overriding=true
-
+spring.profiles.active=local
 #EUREKA
-eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=gateway
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
