--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -1,19 +1,18 @@
 spring.application.name=PRODUCTSERVICE
 server.port=9879
+spring.profiles.active=local
 
-eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=PRODUCTSERVICE
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.datasource.url=jdbc:postgresql://warehouse-db:5432/${POSTGRES_DB}
+
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.show-sql=true
 spring.flyway.ignore-migration-patterns=*:missing
 spring.flyway.validate-on-migrate=false
 
-apigateway.url=http://gateway-service:8080/api/gateway/register
 
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=health
