--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=AUTHS
 server.port=9876
 spring.main.allow-bean-definition-overriding=true
+spring.profiles.active=local
 #EUREKA CONFIG
-eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.instance-id=AUTHS
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 #BAZA
-spring.datasource.url=jdbc:postgresql://warehouse-db:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.show-sql=true
