--- a/contractorService/src/main/resources/application.properties
+++ b/contractorService/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=CONTRACTORS
 server.port=9877
-
-eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
+spring.profiles.active=local
 eureka.instance.instance-id=CONTRACTORS
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.datasource.url=jdbc:postgresql://warehouse-db:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.show-sql=true
@@ -17,5 +15,3 @@ jwt.niewzykle_wazny_secret_jwt=${JWT_SECRET}
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=never
-
-apigateway.url=http://gateway-service:8080/api/gateway/register
