--- a/productService/pom.xml
+++ b/productService/pom.xml
@@ -135,6 +135,12 @@
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
+            <artifactId>warehouse</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
             <artifactId>contractorService</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
