--- a/contractorService/src/main/resources/application.properties
+++ b/contractorService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CONTRACTORS
 server.port=9877
-spring.profiles.active=docker
+spring.profiles.active=local
 eureka.instance.instance-id=CONTRACTORS
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
