--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=product
 server.port=9878
-spring.profiles.active=docker
+spring.profiles.active=local
 
 eureka.instance.instance-id=PRODUCT
 eureka.client.register-with-eureka=true
