--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=PRODUCTSERVICE
 server.port=9879
-spring.profiles.active=docker
+spring.profiles.active=local
 
 eureka.instance.instance-id=PRODUCTSERVICE
 eureka.client.register-with-eureka=true
