--- a/warehouse/src/main/resources/application.properties
+++ b/warehouse/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=warehouse
 server.port=9880
-spring.profiles.active=docker
+spring.profiles.active=local
 
 eureka.instance.instance-id=WAREHOUSE
 eureka.client.register-with-eureka=true
